first draft done, time to style

--- a/app/views/user_mailer/discount.html.erb
+++ b/app/views/user_mailer/discount.html.erb
@@ -1,3 +1,6 @@
-Hi <%= @user.email %>
+<p>Hi <%= @user.email %>,<p>
 
-It's <%= @temp %> degrees out and <%= @desc %> in <%= @user.city %>
+<p>It's <%= @temp %> degrees outside and <%= @desc %> in <%= @user.city %>. Hope you have a great day and enjoy the discount!<p>
+
+<p>Best,</p>
+<p>Alex</p>
