--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -7,10 +7,15 @@
   margin-top: 50px;
   border: 2px solid black;
   border-radius: 5px;
+
 }
 
 .signup-form {
-  margin-top: 50px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  h3{
+    text-align: center;
+  }
   label {
     display: block;
     margin-top: 20px;
@@ -18,11 +23,16 @@
   }
   .btn-container {
     margin-top: 30px;
-    margin-bottom: 70px;
+    margin-bottom: 50px;
     text-align: center;
     .subscribe-button {
+    }  
+  }
+  .img-container {
+    text-align: center;
+    img {
+      max-width: 100%;
     }
-    
   }
 }
 
