--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,8 +4,9 @@
     <hr>
     <div class="row">
       <div class="col-sm-8 col-sm-offset-2 signup-form">
+        <h4>Enter your email and location below to sign up for an exclusive newsletter.</h4>
         <%= simple_form_for @user do |f| %>
-          <%= f.input :email, label: "Email Address", input_html: {class:"form-control" } %>
+          <%= f.input :email, label: "Email Address", input_html: {class:"form-control", placeholder: "name@address.com" } %>
           <%= f.input :city, label: "Location",  input_html: {class:"form-control" }, collection: CITIES %>
           <div class="btn-container">
             <%= f.button :submit, class:"btn btn-primary subscribe-button", value:"Subscribe" %>
