email has gifs determined by weather

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,9 +9,11 @@
         <div class="img-container">
           <%= image_tag(@image) %>
         </div>
+        <h5>In a few seconds, you will receive an email with crucial information (and maybe another GIF), so check your inbox!</h5>
         <h5>Here's your info: </h5>
         <h5>Email: <%= @user.email %> </h5>
         <h5> Location: <%= @user.city %> </h5>
+        <p>P.S. Don't like the GIF? Just reload the page for another.</p>
       </div>
     </div>
   </div>
