--- a/app/views/user_mailer/discount.html.erb
+++ b/app/views/user_mailer/discount.html.erb
@@ -1,9 +1,18 @@
 <p>Hi <%= @user.email %>,<p>
 
-<p>It's <%= @temp %> degrees and <%= @desc %> in <%= @user.city %>. Enjoy the discount and have a great day!<p>
+<p>
+  It's <%= @temp %> degrees and <%= @desc %> in <%= @user.city %>.
+  <%= @pre_image_texts[0] %>
+</p>
+
+<%= image_tag(@first_gif, style:"max-width: 200px") %>
+
+<p><%= @pre_image_texts[1] %></p>
+
+<%= image_tag(@celeb_gif, style:"max-width: 200px") %> 
 
 
 <p>Best,</p>
 <p>Alex</p>
 
-<p> P.S. <%= @pre_image_text %> <%= image_tag(@icon, style:"vertical-align: middle") %><p>
+<p> P.S. <%= @pre_image_texts[2] %> <%= image_tag(@icon, style:"vertical-align: middle") %><p>
