updated precip data

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
         <div class="img-container">
           <%= image_tag(@image) %>
         </div>
-        <h5>In a few seconds, you will receive an email with crucial information (and maybe another GIF), so check your inbox!</h5>
+        <h5>You will receive an email every morning with crucial information (and maybe another GIF), so check your inbox!</h5>
         <h5>Here's your info: </h5>
         <h5>Email: <%= @user.email %> </h5>
         <h5> Location: <%= @user.city %> </h5>
